--- a/scss/style.scss
+++ b/scss/style.scss
@@ -242,7 +242,7 @@ h4 { font-size: 11px; font-weight:bold; }
 
         &.projects  span { color: $title_blue; }
         &.solutions span { color: $title_blue; }
-        &.ashoka    span { color: $green; }
+        &.ashokas    span { color: $green; }
         &.agencies  span { color: $gold; }
       }
     }
