--- a/scss/style.scss
+++ b/scss/style.scss
@@ -235,6 +235,7 @@ h4 { font-size: 11px; font-weight:bold; }
     padding: 10px 0px 20px 0;
 
     .btn { float:right; }
+    .or { float:right; margin: 13px 13px 0 0; font-size:11px; color:$subtle_gray; font-weight:500; text-transform: uppercase; }
 
     .input_field {
       position:relative;
