--- a/scss/style.scss
+++ b/scss/style.scss
@@ -923,6 +923,11 @@ $markerRadiusSize: 102px;
   display:none;
 }
 
+.slider {
+
+position: relative; text-align: left;
+height: .8em;
+
 .ui-helper-hidden { display: none; }
 .ui-helper-hidden-accessible { position: absolute !important; clip: rect(1px 1px 1px 1px); clip: rect(1px,1px,1px,1px); }
 .ui-helper-reset { margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none; }
@@ -966,20 +971,37 @@ $markerRadiusSize: 102px;
 .ui-priority-primary, .ui-widget-content .ui-priority-primary, .ui-widget-header .ui-priority-primary { font-weight: bold; }
 .ui-priority-secondary, .ui-widget-content .ui-priority-secondary,  .ui-widget-header .ui-priority-secondary { opacity: .7; filter:Alpha(Opacity=70); font-weight: normal; }
 .ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled { opacity: .35; filter:Alpha(Opacity=35); background-image: none; }
-.ui-slider { position: relative; text-align: left; }
 .ui-slider-handle.ui-state-default.ui-corner-all { z-index:1000; }
-.ui-slider .ui-slider-handle { position: absolute; z-index: 2; width: 1.2em; height: 1.2em; cursor: col-resize; }
-.ui-slider .ui-slider-range { position: absolute; z-index: 1; font-size: .7em; display: block; border: 0; background-position: 0 0; }
+.ui-slider-handle { position: absolute; z-index: 2; width: 1.2em; height: 1.2em; cursor: col-resize; }
+.ui-slider-range { position: absolute; z-index: 1; font-size: .7em; display: block; border: 0; background-position: 0 0; }
 
-.ui-slider-horizontal { height: .8em; }
-.ui-slider-horizontal .ui-slider-handle { cursor:col-resize; display:block; top: 30px; margin-left: -.6em; }
-.ui-slider-horizontal .ui-slider-range { top: 6px; height: 68px; }
-.ui-slider-horizontal .ui-slider-range-min { left: 0; }
-.ui-slider-horizontal .ui-slider-range-max { right: 0; }
+.ui-slider-handle { cursor:col-resize; display:block; top: 30px; margin-left: -.6em; }
+.ui-slider-range { top: 6px; height: 68px; }
+.ui-slider-range-min { left: 0; }
+.ui-slider-range-max { right: 0; }
+}
 
-.ui-slider-vertical { width: .8em; height: 100px; }
-.ui-slider-vertical .ui-slider-handle { left: -.3em; margin-left: 0; margin-bottom: -.6em; }
-.ui-slider-vertical .ui-slider-range { left: 0; width: 100%; }
-.ui-slider-vertical .ui-slider-range-min { bottom: 0; }
-.ui-slider-vertical .ui-slider-range-max { top: 0; }
+.ui-autocomplete {
+  padding-top: 10px;
+  width:362px;
+  background:rgba(255,255,255,.5);
+  padding-bottom: 7px;
 
+  li { margin-bottom: 10px; padding: 5px 10px; cursor:pointer; outline:none; }
+
+  a {
+    font-size: 15px;
+    color:#666;
+    width:auto;
+    display:block;
+    cursor:pointer;
+    @include single-transition(color, 0.2s, ease-in-out, 0);
+
+    &:hover {
+      width:auto;
+      color:#000;
+      cursor:pointer;
+      outline:none;
+    }
+  }
+}
