--- a/scss/style.scss
+++ b/scss/style.scss
@@ -245,7 +245,8 @@ h4 { font-size: 11px; font-weight:bold; }
       @include backgrounds-sprite(bkg_input_left);
       background-repeat: none;
 
-      .magnifier { position:absolute; top: 12px; right: 10px; width:16px; height: 15px; @include icons-sprite(magnifier); }
+      .magnifier { position:absolute; top: 13px; right: 13px; width:16px; height: 15px; @include icons-sprite(magnifier); }
+      .magnifier:hover { @include icons-sprite(magnifier, $offset-y:-15px);}
       .placeholder { position: absolute; top: 10px; left: 12px; font-size:15px; font-weight:200; color:#CCC; line-height:normal; }
 
       input[type="text"] {
