--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,6 +72,7 @@ h4 { font-size: 11px; font-weight:bold; }
   z-index: 10600;
 
   h1 { position:relative; top: 10px; float:left; }
+  h1 a { color: $title_blue; }
 
   .shadow { position:absolute; left:0; bottom: -12px; background:url(../img/backgrounds/bkg_navigation_shadow.png) repeat-x; width:100%; height:12px; z-index:10;}
 
