--- a/scss/style.scss
+++ b/scss/style.scss
@@ -238,35 +238,6 @@ h4 { font-size: 11px; font-weight:bold; }
     .btn { float:right; }
     .or { float:right; margin: 13px 13px 0 0; font-size:11px; color:$subtle_gray; font-weight:500; text-transform: uppercase; }
 
-    .input_field {
-      position:relative;
-      height:41px;
-      margin: 0 0 9px 0;
-
-      @include backgrounds-sprite(bkg_input_left);
-      background-repeat: none;
-
-      .magnifier { position:absolute; top: 13px; right: 13px; width:16px; height: 15px; @include icons-sprite(magnifier); }
-      .magnifier:hover { @include icons-sprite(magnifier, $offset-y:-15px);}
-      .placeholder { position: absolute; top: 10px; left: 12px; font-size:15px; font-weight:200; color:#CCC; line-height:normal; }
-
-      input[type="text"] {
-        height:41px;
-        width:362px - 34 - 6 - 6;
-        margin-left: 6px;
-        padding: 0 34px 0 6px;
-
-        border:none;
-        background:url(../img/backgrounds/bkg_input_right.png) repeat-x right 0;
-
-        color:$dark_gray;
-        font-size:14px;
-        font-weight:200;
-
-        outline: none;
-      }
-    }
-
     ul {
       margin: 0 0 32px 0;
 
@@ -296,6 +267,36 @@ h4 { font-size: 11px; font-weight:bold; }
   }
 }
 
+.input_field {
+  position:relative;
+  height:41px;
+  margin: 0 0 9px 0;
+
+  @include backgrounds-sprite(bkg_input_left);
+  background-repeat: none;
+
+  .magnifier { position:absolute; top: 13px; right: 13px; width:16px; height: 15px; @include icons-sprite(magnifier); }
+  .magnifier.dark { @include icons-sprite(magnifier_dark); }
+  .magnifier.dark:hover { @include icons-sprite(magnifier_dark, $offset-y:-15px); }
+  .magnifier:hover { @include icons-sprite(magnifier, $offset-y:-15px);}
+  .placeholder { position: absolute; top: 10px; left: 12px; font-size:15px; font-weight:200; color:#CCC; line-height:normal; }
+
+  input[type="text"] {
+    height:41px;
+    width:362px - 34 - 6 - 6;
+    margin-left: 6px;
+    padding: 0 34px 0 6px;
+
+    border:none;
+    background:url(../img/backgrounds/bkg_input_right.png) repeat-x right 0;
+
+    color:$dark_gray;
+    font-size:14px;
+    font-weight:200;
+
+    outline: none;
+  }
+}
 
 // Buttons
 .btn {
@@ -420,12 +421,25 @@ h4 { font-size: 11px; font-weight:bold; }
   }
 }
 
+.cancel { float:right; display:none; width: 227px; height: 40px; position: relative; right:-250px; top: 30px;  z-index: 10000; }
+
 // Navigation
 .nav ul.filters {
   &.disabled > li > a { color:#ccc; background:url(../img/icons/arrows.png) no-repeat right -78px; }
 }
 
-.cancel { float:right; display:none; width: 227px; height: 40px; position: relative; right:-250px; top: 30px;  z-index: 10000; }
+.nav .input_field {
+  display:none;
+
+  position:relative;
+  top:25px;
+  float:right;
+  margin-left: 20px;
+
+  input[type="text"] {
+    width:213px - 40;
+  }
+}
 
 .nav ul.filters li {
   position:relative;
@@ -544,7 +558,7 @@ h4 { font-size: 11px; font-weight:bold; }
         width:38px;
         margin-left: 5px;
 
-       & > li {
+        & > li {
           width:auto;
           padding: 0 0 11px 10px;
           margin: 0 0 12px 0;
@@ -788,14 +802,13 @@ h4 { font-size: 11px; font-weight:bold; }
     padding: $pT $pR $pB $pL;
     margin-left:10px;
 
+    &.search, &.project { display:none; }
     h4 { margin: 0 0 5px 0; text-transform: uppercase; color:$light_gray; }
 
     ul {
       width: 283px;
+
       li {
-
-        //  display:none;
-
         padding: 19px 0 19px 30px;
         font-size:15px;
         color:$dark_gray;
@@ -813,10 +826,14 @@ h4 { font-size: 11px; font-weight:bold; }
     ul li a { border-bottom: 1px dashed #999; line-height:17px; }
 
     .header {
+
+      padding: 0 0 30px 0;
+      border-bottom: 2px solid $light_blue;
+
       .hgroup { // header titles
         width: 283px;
 
-        h2 { padding: 0 0 30px 0; font-family: 'NewsCycle', sans-serif; color:$dark_gray; border-bottom: 2px solid $light_blue; line-height:22px;}
+        h2 { padding: 0 0 15px 0; font-family: 'NewsCycle', sans-serif; color:$dark_gray;  line-height:22px;}
         h2.no_border { border:none; padding: 0; }
         h4 { margin: 0 0 6px 0; color:$regular_blue; opacity:.6; text-transform:uppercase; }
       }
