--- a/scss/style.scss
+++ b/scss/style.scss
@@ -808,7 +808,7 @@ h4 { font-size: 11px; font-weight:bold; }
 
       margin: 0 0 10px 0;
       padding: 0 0 0 10px;
-      @include icons-sprite(bullet, $offset-y: 27px);
+      @include icons-sprite(bullet, $offset-y: 8px);
       line-height:20px;
       border: none;
     }
@@ -1044,3 +1044,25 @@ $markerRadiusSize: 102px;
     }
   }
 }
+
+.scroll-pane {
+  width: 100%;
+  height: 500px;
+  overflow: auto;
+  margin: 20px 0 0 0;
+  outline:none;
+}
+
+.jspContainer { overflow: hidden; position: relative; }
+.jspPane { position: absolute; }
+.jspVerticalBar { position: absolute; top: 0; right: 0; width: 5px; height: 100%; }
+.jspVerticalBar * { margin: 0; padding: 0; }
+.jspCap { display: none; }
+.jspTrack { background: none; position: relative; }
+.jspDrag { background: rgba(0,0,0,.2); position: relative; top: 0; left: 0; cursor: pointer; @include border-radius(3px); }
+.jspArrow { background: #50506d; text-indent: -20000px; display: block; cursor: pointer; }
+.jspArrow.jspDisabled { cursor: default; background: #80808d; }
+.jspVerticalBar .jspArrow { height: 16px; }
+.jspVerticalBar .jspArrow:focus { outline: none; }
+.jspCorner { background: #eeeef4; float: left; height: 100%; }
+
