--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1071,5 +1071,5 @@ $markerRadiusSize: 102px;
 .jspCorner { background: #eeeef4; float: left; height: 100%; }
 
 
-.ie8 #autocomplete { line-height:30px; }
-.ie8 #addresspicker { line-height:30px; }
+.lt-ie9 #autocomplete { line-height:40px; }
+.lt-ie9 #addresspicker { line-height:40px; }
