--- a/scss/style.scss
+++ b/scss/style.scss
@@ -89,8 +89,7 @@ h4 { font-size: 11px; font-weight:bold; }
   bottom: 0;
   left: 0;
   z-index: 10500;
-  background-color: #fff;
-  background-color:rgba(255,255,255, 0.8);
+  background: url('/img/backgrounds/bkg_backdrop.png');
 }
 
 .timeline-cover {
