--- a/scss/style.scss
+++ b/scss/style.scss
@@ -803,11 +803,12 @@ h4 { font-size: 11px; font-weight:bold; }
     &.search, &.project { display:none; }
     &.search .results {
 
-      strong { display:block; margin-bottom: 20px; font-weight:bold; font-size:11px; color:$title_blue; text-transform:uppercase; }
+      strong { display:block; width:270px; margin-bottom: 20px; font-weight:bold; font-size:11px; color:$title_blue; text-transform:uppercase; }
 
       li {
         list-style:none;
         opacity:0;
+        width:270px;
 
         a { cursor:pointer; border-bottom: 1px dashed $subtle_gray; }
 
