--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 //@import url(http://fonts.googleapis.com/css?family=News+Cycle);
 
-
 @import "compass/reset";
 @import "compass/css3";
 @import "sprites.scss";
@@ -89,7 +88,7 @@ h4 { font-size: 11px; font-weight:bold; }
   bottom: 0;
   left: 0;
   z-index: 10500;
-  background: url('/img/backgrounds/bkg_backdrop.png');
+  background: url('../img/backgrounds/bkg_backdrop.png');
 }
 
 .timeline-cover {
@@ -138,7 +137,7 @@ h4 { font-size: 11px; font-weight:bold; }
       left: 0px;
       padding-right: 18px;
       padding-top:8px;
-      background:url(/img/icons/l_arrow.png) no-repeat right top;
+      background:url(../img/icons/l_arrow.png) no-repeat right top;
     }
 
     .filter {
@@ -148,7 +147,7 @@ h4 { font-size: 11px; font-weight:bold; }
 
       padding-right: 10px;
       padding-top:30px;
-      background:url(/img/icons/double_arrow.png) no-repeat right top;
+      background:url(../img/icons/double_arrow.png) no-repeat right top;
     }
 
   }
@@ -1082,6 +1081,7 @@ $markerRadiusSize: 102px;
   outline:none;
 }
 
+.prueba { margin: 100px;}
 .jspContainer { overflow: hidden; position: relative; }
 .jspPane { position: absolute; }
 .jspVerticalBar { position: absolute; top: 0; right: 0; width: 5px; height: 100%; }
@@ -1094,6 +1094,5 @@ $markerRadiusSize: 102px;
 .jspVerticalBar .jspArrow { height: 16px; }
 .jspVerticalBar .jspArrow:focus { outline: none; }
 .jspCorner { background: #eeeef4; float: left; height: 100%; }
-
 .lt-ie9 #autocomplete { line-height:40px; }
 .lt-ie9 #addresspicker { line-height:40px; }
