--- a/scss/style.scss
+++ b/scss/style.scss
@@ -171,9 +171,8 @@ h4 { font-size: 11px; font-weight:bold; }
     position:relative;
     @include inline-block();
     width:524px;
-    padding-right:40px;
-    margin-right:40px;
 
+    margin-right:40px;
     padding: 10px 40px 20px 0;
 
     background:url(../img/icons/separator.png) repeat-y top right;
@@ -1081,7 +1080,6 @@ $markerRadiusSize: 102px;
   outline:none;
 }
 
-.prueba { margin: 100px;}
 .jspContainer { overflow: hidden; position: relative; }
 .jspPane { position: absolute; }
 .jspVerticalBar { position: absolute; top: 0; right: 0; width: 5px; height: 100%; }
@@ -1094,5 +1092,8 @@ $markerRadiusSize: 102px;
 .jspVerticalBar .jspArrow { height: 16px; }
 .jspVerticalBar .jspArrow:focus { outline: none; }
 .jspCorner { background: #eeeef4; float: left; height: 100%; }
-.lt-ie9 #autocomplete { line-height:40px; }
-.lt-ie9 #addresspicker { line-height:40px; }
+
+// IE < 9
+.lt-ie9 .addresspicker { line-height:40px; }
+.lt-ie9 .welcome .left-side { float:left;  }
+.lt-ie9 .welcome .right-side { float:left; }
