--- a/scss/style.scss
+++ b/scss/style.scss
@@ -411,6 +411,7 @@ h4 { font-size: 11px; font-weight:bold; }
     & > li {
       display:inline;
       margin-left: 26px;
+
       & > a {
         &.selected { background:url(../img/icons/arrows.png) no-repeat right -45px; }
 
@@ -431,6 +432,7 @@ h4 { font-size: 11px; font-weight:bold; }
   top:30px;
   width:500px;
   float:right;
+  z-index:150;
 }
 
 .nav .input_field {
